--- a/Lightning2/Content/InputBindings.ini
+++ b/Lightning2/Content/InputBindings.ini
@@ -5,7 +5,7 @@
 [Xinput] ; Xinput Controller (e.g. DualShock 4)
 [KeyboardMouse] ; Keyboard & Mouse
 DebugDisplayTrigger = "F9"
-DebugDisplayConsole = "F10"
+DebugConsoleTrigger = "F10"
 DebugDisplayPageUp = "PAGEUP"
 DebugDisplayPageDown = "PAGEDOWN"
 
