--- a/MakePackage/MakePackage.csproj
+++ b/MakePackage/MakePackage.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Nullable>disable</Nullable>
-	<Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final</Configurations>
+	<Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final;Profiling</Configurations>
 	<TransformOnBuild>true</TransformOnBuild>
 	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
 	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
@@ -25,6 +25,11 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profiling|AnyCPU'">
+	  <PlatformTarget>x64</PlatformTarget>
+	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
