--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;Final</Configurations>
+    <Configurations>Debug;Release;Final;Profiling</Configurations>
 	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 
@@ -17,6 +17,11 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profiling|AnyCPU'">
+	  <PlatformTarget>x64</PlatformTarget>
+	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
