--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -6,7 +6,7 @@
 	<TransformOnBuild>true</TransformOnBuild>
 	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
 	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
-	<Configurations>Debug;Release;Final</Configurations>
+	<Configurations>Debug;Release;Final;Profiling</Configurations>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<PlatformTarget>x64</PlatformTarget>
 	<Product>$(AssemblyName)</Product>
@@ -21,6 +21,11 @@
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profiling|AnyCPU'">
+	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	  <Optimize>True</Optimize>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
