--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>LightningBase</RootNamespace>
-    <Configurations>Debug;Release;Final</Configurations>
+    <Configurations>Debug;Release;Final;Profiling</Configurations>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Description>Lightning Native Bindings</Description>
     <Authors>Ethan, starfrost</Authors>
@@ -23,6 +23,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profiling|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
   </PropertyGroup>
