--- a/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
+++ b/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
@@ -10,7 +10,7 @@
 	<TransformOnBuild>true</TransformOnBuild>
 	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
 	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
-	<Configurations>Debug;Release;Final</Configurations>
+	<Configurations>Debug;Release;Final;Profiling</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
