--- a/SDKBuild/SDKBuild.csproj
+++ b/SDKBuild/SDKBuild.csproj
@@ -12,7 +12,7 @@
 	  <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 	  <AssemblyVersion>2.3.1.0</AssemblyVersion>
 	  <FileVersion>2.3.1.0</FileVersion>
-	  <Configurations>Debug;Release;Final</Configurations>
+	  <Configurations>Debug;Release;Final;Profiling</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
