--- a/VSTemplate/Content/InputBindings.ini
+++ b/VSTemplate/Content/InputBindings.ini
@@ -2,9 +2,6 @@
 ; Created					February 11, 2023
 ; Default bindings added	February 21, 2023
 
-; Do not remove anything you see here
-; These are used for inbuilt UI
-
 [Xinput] ; Xinput Controller (e.g. DualShock 4)
 [KeyboardMouse] ; Keyboard & Mouse
 DebugDisplayTrigger = "F9"
@@ -12,4 +9,4 @@ DebugConsoleTrigger = "F10"
 DebugDisplayPageUp = "PAGEUP"
 DebugDisplayPageDown = "PAGEDOWN"
 
-Mouse1 = "MOUSE1" 
+Mouse1 = "MOUSE1" ; DO NOT REMOVE! this is used for inbuilt ui elements!
