--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -32,6 +32,7 @@
 
 	
   <ItemGroup>
+    <None Remove="Content\Animations\Animation1.json" />
     <None Remove="Content\Animations\TestAnimation.json" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF0.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF1.png" />
@@ -45,6 +46,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Content\Animations\Animation1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Animations\TestAnimation.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
