--- a/Examples/basic/basic.csproj
+++ b/Examples/basic/basic.csproj
@@ -18,11 +18,11 @@
 	  <Reference Include="LightningPackager">
 		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
 	  </Reference>
-	  <Reference Include="NuCore.Utilities">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
+	  <Reference Include="LightningUtil">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtil.dll</HintPath>
 	  </Reference>
-	  <Reference Include="NuCore.Utilities.Lightning">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.Lightning.dll</HintPath>
+	  <Reference Include="LightningUtilSdl">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtilSdl.dll</HintPath>
 	  </Reference>
   </ItemGroup>
 
