--- a/Examples/shared/Content/Engine.ini
+++ b/Examples/shared/Content/Engine.ini
@@ -3,9 +3,7 @@
 [General]
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
-PerformanceProfiler = false
-DontUseSceneManager = true ; TEMP 20
-SplashScreenEnabled = true
+ProfilePerformance = false
 
 [Graphics]
 ResolutionX = 960
