--- a/Examples/Audio/Audio.csproj
+++ b/Examples/Audio/Audio.csproj
@@ -8,22 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <Reference Include="LightningBase">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
-	  </Reference>
-	  <Reference Include="LightningGL">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
-	  </Reference>
-	  <Reference Include="LightningPackager">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
-	  </Reference>
-	  <Reference Include="NuCore.Utilities">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
-	  </Reference>
-	  <Reference Include="NuCore.Utilities.Lightning">
-		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.Lightning.dll</HintPath>
-	  </Reference>
-  </ItemGroup>
+    <Reference Include="LightningBase">
+	  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
+	</Reference>
+	<Reference Include="LightningGL">
+      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
+    </Reference>
+    <Reference Include="LightningPackager">
+      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
+    </Reference>
+    <Reference Include="LightningUtil">
+      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtil.dll</HintPath>
+    </Reference>
+    <Reference Include="LightningUtilSdl">
+      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtilSdl.dll</HintPath>
+    </Reference>
+  </ItemGroup>	
+	
 
   <!-- Shared includes for all examples. These are copied individually because they are open source and devs use them as part of the SDK -->
   <ItemGroup>
@@ -41,17 +42,14 @@
 	  <None Remove="../shared/Content/Localisation/en-GB-test.ini" />
 	  <None Remove="../shared/Content/Localisation/pseudo.ini" />
 	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libfreetype-6.dll" />
-	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libjpeg-9.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libjpeg-5.dll" />
 	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libtiff-5.dll" />
 	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libwebp-7.dll" />
 	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2.dll" />
-	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_gfx-x64.dll" />
-	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_image-x64.dll" />
-	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
-	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_mixer-x64.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_image.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_mixer.dll" />
 	  <None Remove="Content\deepbluecalm.flac" />
-	  <None Remove="Content\demarco.mp3" />
-	  <None Remove="Content\projectx.mod" />
+	  <None Remove="Content\demarco.mp3" />	  
 	  <None Remove="Content\royksopp.mp3" />
   </ItemGroup>
 
@@ -108,46 +106,35 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Content/Localisation/pseudo.ini</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libfreetype-6.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/freetype.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/libfreetype-6.dll</Link>
+		  <Link>freetype.dll</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libjpeg-9.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libjpeg-5.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/libjpeg-9.dll</Link>
+		  <Link>libjpeg-5.dll</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libtiff-5.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/libtiff-5.dll</Link>
+		  <Link>libtiff-5.dll</Link>
 	  </Content>
 	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit//Libraries/libwebp-7.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/libwebp-7.dll</Link>
+		  <Link>libwebp-7.dll</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2.dll</Link>
+		  <Link>SDL2.dll</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_image.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_gfx-x64.dll</Link>
+		  <Link>SDL2_image-x64.dll</Link>
 	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_mixer.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_image-x64.dll</Link>
-	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_ttf-v2.0.18-x64.dll</Link>
-	  </Content>
-	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-x64.dll">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_mixer-x64.dll</Link>
+		  <Link>SDL2_mixer-x64.dll</Link>
 	  </Content>
 	  <Content Include="Content\deepbluecalm.flac">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Content\projectx.mod">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Content\royksopp.mp3">
