--- a/Examples/Settings/Settings.csproj
+++ b/Examples/Settings/Settings.csproj
@@ -8,20 +8,23 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Reference Include="LightningBase">
-	  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
-	</Reference>
-	<Reference Include="LightningGL">
-      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
-    </Reference>
-    <Reference Include="LightningPackager">
-      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
-    </Reference>
-    <Reference Include="NuCore.Utilities">
-      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+	<ItemGroup>
+		<Reference Include="LightningBase">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
+		</Reference>
+		<Reference Include="LightningGL">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
+		</Reference>
+		<Reference Include="LightningPackager">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
+		</Reference>
+		<Reference Include="LightningUtil">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtil.dll</HintPath>
+		</Reference>
+		<Reference Include="LightningUtilSdl">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningUtilSdl.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
 	<!-- Shared includes for all examples. These are copied individually because they are open source and devs use them as part of the SDK -->
     <ItemGroup>
@@ -38,15 +41,13 @@
 		<None Remove="Content/Engine.ini" />
 		<None Remove="Content/Localisation/en-GB-test.ini" />
 		<None Remove="Content/Localisation/pseudo.ini" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libfreetype-6.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libjpeg-9.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libwebp-7.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-v2.0.5-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-v2.0.4-x64.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/freetype.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libjpeg-5.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libtiff-5.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libwebp-7.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_image.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_mixer.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -76,7 +77,7 @@
 		</Content>
 		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libpng16-16.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>llibpng16-16.dll</Link>
+			<Link>libpng16-16.dll</Link>
 		</Content>
 		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libvorbis-0.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -93,47 +94,43 @@
 		<Content Include="Content/Engine.ini">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<Content Include="../shared/Content/InputBindings.ini">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Link>Content/InputBindings.ini</Link>
+		</Content>
 		<Content Include="Content/Localisation/en-GB-test.ini">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="Content/Localisation/pseudo.ini">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libfreetype-6.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/freetype.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libfreetype-6.dll</Link>
+			<Link>freetype.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libjpeg-9.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libjpeg-5.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libjpeg-9.dll</Link>
+			<Link>libjpeg-5.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libtiff-5.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libtiff-5.dll</Link>
+			<Link>libtiff-5.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libwebp-7.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libwebp-7.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libwebp-7.dll</Link>
+			<Link>libwebp-7.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2.dll</Link>
+			<Link>SDL2.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-x64.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_image.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_gfx-x64.dll</Link>
+			<Link>SDL2_image.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-x64.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_mixer.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_image-x64.dll</Link>
-		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_ttf-v2.0.18-x64.dll</Link>
-		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-x64.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_mixer-x64.dll</Link>
+			<Link>SDL2_mixer.dll</Link>
 		</Content>
 	</ItemGroup>
 </Project>
