--- a/AnimTool/AnimTool.csproj
+++ b/AnimTool/AnimTool.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lightning2\LightningGL.csproj" />
+    <ProjectReference Include="..\LightningGL\LightningGL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
