--- a/LightningPackager/LightningPackager.csproj
+++ b/LightningPackager/LightningPackager.csproj
@@ -34,8 +34,8 @@
   </PropertyGroup>
 	
   <ItemGroup>
-    <ProjectReference Include="..\NuCore.SDL2-CS\LightningBase.csproj" />
-    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
+    <ProjectReference Include="..\LightningBase\LightningBase.csproj" />
+    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
   </ItemGroup>
 	
   <ItemGroup>
