--- a/LightningUtilSdl/LightningUtilSdl.csproj
+++ b/LightningUtilSdl/LightningUtilSdl.csproj
@@ -19,8 +19,8 @@
 
 	
   <ItemGroup>
-    <ProjectReference Include="..\NuCore.SDL2-CS\LightningBase.csproj" />
-    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
+    <ProjectReference Include="..\LightningBase\LightningBase.csproj" />
+    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
