fix memory corruption bug when writing to texture that is also scaled by a JSON animation

--- a/LightningBase/LightningBase.csproj
+++ b/LightningBase/LightningBase.csproj
@@ -60,4 +60,8 @@
       <Generator>TextTemplatingFileGenerator</Generator>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SDL2_net\" />
+  </ItemGroup>
 </Project>
