--- a/LightningGL.Test/LightningGL.Test.csproj
+++ b/LightningGL.Test/LightningGL.Test.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Nullable>enable</Nullable>
     <Configurations>Debug;Release;Final;Profiling</Configurations>
 	  <PublishAot>true</PublishAot>
