start porting examples

--- a/Examples/shared/Content/Engine.ini
+++ b/Examples/shared/Content/Engine.ini
@@ -1,4 +1,4 @@
-; Engine Global Settings INI
+; Engine Global Settings INI for Lightning 2.0 examples
 
 [General]
 MaxFPS = -1 ; 0 or lower = off
@@ -13,5 +13,5 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 [Localisation]
 Language = "en-GB-test"
 
-;[Scene]
-;StartupScene = "MainScene"
+[Scene]
+StartupScene = "MainScene"
