--- a/Examples/Texture/Texture.csproj
+++ b/Examples/Texture/Texture.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
 	  <PlatformTarget>x64</PlatformTarget>
+	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
 	<ItemGroup>
