--- a/Examples/BasicScene/Content/Engine.ini
+++ b/Examples/BasicScene/Content/Engine.ini
@@ -3,14 +3,14 @@
 [General]
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
-PerformanceProfiler = false
+ProfilePerformance = true
 
 [Graphics]
 ;comment these out to force default to native res
 ;ResolutionX = 960
 ;ResolutionY = 640
 
-WindowFlags = "SDL_WINDOW_SHOWN"
+WindowFlags = "SDL_WINDOW_FULLSCREEN"
 
 [Localisation]
 Language = "en-GB-test"
