--- a/LightningBase/LightningBase.csproj
+++ b/LightningBase/LightningBase.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
 	<!-- Import text templating -->
-	<!--<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />-->
+	<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
 	
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;WINDOWS,X64</DefineConstants>
