it now actually compiles

--- a/LightningGL/LightningGL.csproj
+++ b/LightningGL/LightningGL.csproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Folder Include="Content\Fonts\" />
     <Folder Include="Properties\" />
+    <Folder Include="Renderers\SDLv2\" />
   </ItemGroup>
 
   <ItemGroup>
